--- a/src/index.css
+++ b/src/index.css
@@ -76,6 +76,7 @@ table {
 
 .main-title {
     width : 60%;
+    max-width: 936px;
     font-family: "Montserrat", sans-serif;
     font-weight: 700;
     font-size: 36px;
@@ -138,11 +139,223 @@ a {
     width: 34px;
 }
 
+.about-section {
+    width: 100%;
+    height: 832px;
+    background-color: #F7F7F7;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.section-title {
+    width: 60%;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 700;
+    font-size: 20px;
+    text-transform: uppercase;
+}
+
+.white-colored {
+    color: #FFFFFF ;
+}
+
+.black-colored {
+    color : #000000;
+}
+
+.about-content {
+    width : 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.about-text {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.profil-img {
+    width: 170px;
+    height: 170px;
+    margin-bottom: 40px;
+    background-image: url("assets/profil-img.jpg");
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    border-radius: 14px;
+}
+
+.about-text > p {
+    width: 60%;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 500;
+    font-size: 13px;
+    line-height: 15px;
+    text-align: justify;
+}
+
+.ironhack-img {
+    width: 82px;
+    height: 82px;
+    margin: 5px 0;
+    background-image: url("assets/ironhack-logo.png");
+    background-position: center;
+    background-size: cover;
+}
+
+.ironhack-diplome p, .utt-diplome p {
+    font-family: "Montserrat", sans-serif;
+    font-weight: 700;
+    font-size: 13px;
+    line-height: 16px;
+    text-align: center;
+}
+
+.utt-img {
+    width: 82px;
+    height: 37px;
+    margin: 20px 0;
+    background-image: url("assets/utt-logo.png");
+    background-position: center;
+    background-size: cover;
+}
+
+
+
+.ironhack-diplome, .utt-diplome {
+    width: 55%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.cv-btn {
+    width: 232px;
+    height: 46px;
+    border-radius: 10px;
+    background-color: #0085FF;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.cv-btn p {
+    font-family: "Montserrat", sans-serif;
+    font-weight: 700;
+    font-size: 13px;
+    line-height: 15px;
+    text-align: center;
+    color: #F7F7F7;
+    text-transform: uppercase;
+}
+
+.skills-section-container {
+    width: 100%;
+    height: 958px;
+    background-color: #101C26 ;
+}
+
+
+/**POLICE D'ECRITURE**/
 @media screen and (min-width: 1200px) {
+    .main-title {
+        font-size: 64px;
+        line-height: 78px;
+    }
+
+    .main-headline {
+        font-size: 52px;
+        line-height: 58px;
+    }
+
+    .contact-btn p {
+            font-size: 18px;
+            line-height: 22px;
+    }
+
+    .section-title {
+      font-size: 36px;
+      line-height: 44px;  
+    }
+
+    .about-text > p {
+       font-size: 18px;
+       line-height: 22px; 
+    }
+
+    .ironhack-diplome p,.utt-diplome p {
+        font-size: 18px;
+        line-height: 22px; 
+    }
+
+    .cv-btn {
+        font-size: 16px;
+        line-height: 19.5px;
+    }
+}
+
+/**LAYOUT**/
+@media screen and (min-width: 1200px) {
+    .main-title {
+        width: 100%;
+    }
+
     .toggle-next-container {
         display: flex;
         flex-direction: column;
         align-items: center;
         margin-bottom: 40px;
+    }
+
+    .section-title {
+        width: 100%;
+        max-width: 1034px;
+    }
+
+    .about-content {
+        max-width : 1034px;
+        flex-direction: row;
+        justify-content: space-between; 
+    }
+
+    .profil-img {
+        width: 343px;
+        height: 332px;
+        background-size: 100%;
+    }
+
+    .about-text {
+        max-width: 625px;
+        align-items: start;
+    }
+
+    .about-text > p {
+        width: 100%;
+    }
+
+    .ironhack-diplome,.utt-diplome {
+        width: 100%;
+        flex-direction: row;
+        justify-content: start;
+
+    }
+
+    .ironhack-diplome p , .utt-diplome p {
+        width : 60%;
+        text-align: left;
+        margin-left: 20px;
+    }
+
+    .ironhack-img {
+        background-position: right;
+        background-size: 140%;
     }
 }
