--- a/src/index.css
+++ b/src/index.css
@@ -478,6 +478,23 @@ a {
   border-radius: 16px;
 }
 
+footer {
+  width: 100%;
+  height: 86px;
+  background-color: #000000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+footer p {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 19.5px;
+  color: #FFFFFF;
+}
+
 @media screen and (min-width: 480px) {
   .about-section {
     height: 832px;
