--- a/src/navbar.css
+++ b/src/navbar.css
@@ -60,5 +60,18 @@
         width : 70%;
         display: flex;
         justify-content: space-between;
+        align-items: baseline;
+    }
+
+    .navbar-links a:first-child {
+        border: none;
+        width: 232px;
+        height: 46px;
+        border-radius: 10px;
+        background-color: #0085ff;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
     }
 }
