--- a/src/index.css
+++ b/src/index.css
@@ -507,11 +507,13 @@ footer {
 }
 
 footer p {
+  width: 80%;
   font-family: "Montserrat", sans-serif;
   font-weight: 500;
   font-size: 16px;
   line-height: 19.5px;
   color: #FFFFFF;
+  text-align: center;
 }
 
 @media screen and (min-width: 480px) {
@@ -550,6 +552,10 @@ footer p {
     margin: 0;
     grid-column-start: 2;
     grid-row-start: 3;
+  }
+
+  .footer p {
+    width: 100%;
   }
 }
 
