--- a/src/index.css
+++ b/src/index.css
@@ -346,11 +346,68 @@ a {
 
 .skills-section-container {
   width: 100%;
-  height: 958px;
+  height: fit-content;
   background-color: #101c26;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.skills-section-container h2 {
+  margin-top : 60px;
+}
+
+.skills-section-container h4 {
+  font-family: "Montserrat", sans-serif;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 22px;
+  color:#f7f7f7;
+}
+
+.skills-list {
+  margin-top : 70px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.skill-item {
+  margin-bottom: 50px;
+}
+
+.skill-item img {
+  width: 100px;
+  margin-bottom: 30px;
+}
+
+.skills-list > div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.skill-text {
+  margin-top : 10px;
+  width: 168px;
+  font-family: "Montserrat", sans-serif;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 22px;
+  color:#f7f7f7;
+  text-align: center;
+}
+
+.skill-item:last-child p {
+  width : 230px;
+}
+
+.skill-item:last-child p:last-child {
+  margin: 0;
+}
+
+.skill-item:last-child {
+  margin-bottom: 100px;
 }
 
 .projects-section-container {
@@ -517,6 +574,16 @@ footer p {
 }
 
 @media screen and (min-width: 768px) {
+  .skills-list {
+    width: 75%;
+    max-width: 1034px;
+    margin-bottom: 30px;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: start;
+  }
+
+
   .personal-infos-container {
     width: 80%;
     flex-direction: row;
