--- a/src/index.css
+++ b/src/index.css
@@ -670,6 +670,10 @@ footer p {
     line-height: 22px;
   }
 
+  .contact-btn:hover p {
+    font-size: 16.5px;
+  }
+
   .about-section {
     justify-content: center;
   }
@@ -728,7 +732,9 @@ footer p {
     line-height: 19.5px;
   }
 
-
+  .cv-btn:hover {
+    font-size: 16.5px;
+  }
 
   .bd-example * {
     max-width: 1140px;
@@ -741,5 +747,9 @@ footer p {
 
   .form-container textarea, .form-container input {
     width: 480px;
+  }
+
+  form button:hover {
+    font-size : 16.5px;
   }
 }
