Arrow down main section : Try to change src to see in prod

--- a/src/index.css
+++ b/src/index.css
@@ -644,12 +644,12 @@ footer p {
     margin-top: 10px;
     width: 34px;
     height: 34px;
-    background-image: url("src/assets/arrow-down.png");
+    background-image: url("./assets/arrow-down.png");
     background-size: cover;
   }
 
   .arrow-down-container:hover {
-    background-image: url("src/assets/arrow_down_blue.png");
+    background-image: url("./assets/arrow_down_blue.png");
     background-size: cover;
   }
 
